--- a/client/components/_c-store-spot.scss
+++ b/client/components/_c-store-spot.scss
@@ -36,6 +36,7 @@
     .c-store-spot__heading {
         color: color(highlight);
         text-transform: uppercase;
+        max-width: 100%;
     }
 
     .c-store-spot__info {
